tests/functional/lang/eval-fail-genericClosure-element-not-attrset.err.exp
error:
       … while calling the 'genericClosure' builtin
         at /pwd/lang/eval-fail-genericClosure-element-not-attrset.nix:1:1:
            1| builtins.genericClosure {
             | ^
            2|   startSet = [ "not an attrset" ];

       … while evaluating one of the elements generated by (or initially passed to) builtins.genericClosure

       error: expected a set but found a string: "not an attrset"
